# vortex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  demo_shell.sh  ephemeral-vm.sh  install.sh  run_tests.sh  stress_test.sh  test-commands.txt  test-shell.sh  test_init.rs  test_krunvm.py  test_manual.sh  test_port.sh  test_report.md  test_runner.sh  test_session_concept.md  test_simple  test_simple.rs  test_volume.sh  vortex.rb  vortex.yaml  vortex_discovery  vortex_orchestrator  vortex_orchestrator.rs  vortex_quick  vortex_sessions.rs
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  homebrew.yml  quick-test.yml  release.yml  test.yml
docs/: CI_CD.md  TESTING.md
examples/node-api/: package.json  server.js
examples/python-webapp/: README.md  app.py
examples/rust-cli/: Cargo.toml
examples/rust-cli/src/: main.rs
platform-packages/: build_linux_packages.sh
src/: config.rs  lib.rs  main.rs  vm.rs
src/core/: auth.rs  backend.rs  config.rs  daemon.rs  error.rs  lib.rs  metrics.rs  mod.rs  network.rs  plugin.rs  session.rs  storage.rs  templates.rs  vm.rs  workspace.rs
src/discovery/: mod.rs
systemd/: vortex-daemon.service  vortexd.service
tests/: cli_integration_test.rs  discovery_engine_tests.rs  e2e_tests.rs  orchestrator_integration_tests.rs  workspace_integration_tests.rs  workspace_performance_test.rs
tests/e2e/: dev_templates_tests.rs  devcontainer_migration_test.sh  helpers.rs  mod.rs  test_workspace_demo.sh  vm_lifecycle_tests.rs  workspace_tests.rs
vortex-core/: Cargo.toml
vortex-core/src/: auth.rs  backend.rs  config.rs  error.rs  lib.rs  metrics.rs  network.rs  plugin.rs  storage.rs  vm.rs
vortex-dev/: Cargo.toml
vortex-dev/src/: debugging.rs  dev_tools.rs  lib.rs  testing.rs
vortex-research/: Cargo.toml
vortex-research/src/: analysis.rs  benchmarks.rs  experiments.rs  lib.rs
vortex-workspace-crazy-ecommerce/: vortex-control.sh
vortex-workspace-enterprise-platform/: vortex-control.sh
vortex-workspace-final-test/: vortex-control.sh
vortex-workspace-parse-test-workspace/: vortex-control.sh
vortex-workspace-test-fullstack/: vortex-control.sh
vortex-workspace-test-networking-v3/: vortex-control.sh
vortex-workspace-test-networking-v3/backend/: app.py
vortex-workspace-test-networking-v3/frontend/: app.js
