[package]
name = "vortex"
version = "0.3.1"
edition = "2021"
description = "Lightning-fast ephemeral VM platform with hardware-level isolation"
authors = ["Vortex Contributors"]
license = "MIT"
repository = "https://github.com/exec/vortex"
homepage = "https://github.com/exec/vortex"
keywords = ["vm", "virtualization", "development", "ephemeral", "microvm"]
categories = ["development-tools", "virtualization"]
rust-version = "1.70"

[workspace]
members = [
    "vortex-core",
    "vortex-dev", 
    "vortex-research"
]

[[bin]]
name = "vortex"
path = "src/main.rs"

[dependencies]
vortex-core = { path = "vortex-core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"