[package]
name = "vortex-core"
version = "0.3.0"
edition = "2021"
description = "Vortex Core - Foundation for ephemeral VM management"
authors = ["Dylan <dylan@example.com>"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
toml = "0.8"
tempfile = "3.0"
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["krunvm"]
krunvm = []
firecracker = []
snapshots = []
networking = []
monitoring = []