[package]
name = "vortex-dev"
version = "0.3.0"
edition = "2021"
description = "Vortex Development Extensions - Enhanced dev experience and debugging"
authors = ["Dylan <dylan@example.com>"]
license = "MIT"

[dependencies]
vortex-core = { path = "../vortex-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }